@@ -84,15 +84,16 @@ longusage() {
   echo "	--mdadm			Copy /etc/mdadm.conf to initramfs"
   echo "	--dmraid		Include DMRAID support"
   echo "	--slowusb		Enables extra pauses for slow USB CD boots"
+  echo "	--bootloader=grub	Add new kernel to GRUB configuration"
   echo "	--linuxrc=<file>	Specifies a user created linuxrc"
   echo "	--disklabel		Include disk label and uuid support in your"
   echo "				ramdisk"
   echo "	--luks			Include LUKS support"
   echo "				--> 'emerge cryptsetup-luks' with USE=-dynamic"
-  echo "    --no-busybox    Do not include busybox in the initramfs."
-  echo "    --unionfs       Include support for unionfs"
-  echo "    --netboot		Create a self-contained env in the initramfs"
-  echo "    --real-root=<foo>	Specify a default for real_root="
+  echo "	--no-busybox    Do not include busybox in the initramfs."
+  echo "	--unionfs       Include support for unionfs"
+  echo "	--netboot       Create a self-contained env in the initramfs"
+  echo "	--real-root=<foo> Specify a default for real_root="
   echo "  Internals"
   echo "	--arch-override=<arch>	Force to arch instead of autodetect"
   echo "	--cachedir=<dir>	Override the default cache location"
@@ -272,6 +273,10 @@ parse_cmdline() {
 			fi
 			CMD_DMRAID=1
 			print_info 2 "CMD_DMRAID: ${CMD_DMRAID}"
+			;;
+		--bootloader=*)
+			CMD_BOOTLOADER=`parse_opt "$*"`
+			print_info 2 "CMD_BOOTLOADER: ${CMD_BOOTLOADER}"
 			;;
 		--loglevel=*)
 			CMD_LOGLEVEL=`parse_opt "$*"`
