@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  15 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> +gen_bootloader.sh,
+  gen_cmdline.sh, gen_determineargs.sh, genkernel:
+  Initial commit for re-adding support for --bootloader=grub
+
   14 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> netboot/linuxrc.x:
   Change -f checks to -e for /dev nodes Check that dropbear exists before
   starting it
